@@ -1,5 +1,6 @@
 2000-12-23  Jeff Freedman  <jeff@amy.nerble.net>
 
+	* xdrag.cc (Xdnd): Moved XDND code here.
 	* Set frame in shape chooser.
 
 2000-12-23  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
